--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                     <!--<a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get started</a>-->
 
                                     <a href="#about" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">contacto</a>
-					<a href="#https://ju4nlun4.github.io/utsport.github.io/" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">contacto</a>
+					<a href="#https://ju4nlun4.github.io/utsport.github.io/" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">Registrate</a>
 
                                    
                               </div>
